# babelbot

./: .env.template  .gitignore  .gitmodules  Dockerfile.api  Dockerfile.bridge  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
babelbot/app/: dependencies.py
babelbot/app/routers/: __init__.py
babelbot/app/routers/root/: router.py
babelbot/app/routers/webhook/: router.py
babelbot/client/: client.py
babelbot/whatsapp-bridge/: whatsapp.db
babelbot/whatsapp-mcp/whatsapp-bridge/: go.sum
wa_tfm/: client.py
wa_tfm/app/: dependencies.py  main.py
wa_tfm/app/db/: __init__.py  client.py  models.py  schemas.sql
wa_tfm/app/routers/webhook/: models.py  router.py
wa_tfm/app/whatsapp/: client.py
wa_tfm/app/whatsapp/whatsapp_mcp_server/: server.py  whatsapp_tools.py
wa_tfm/client/: client.py
wa_tfm/whatsapp-bridge/: go.mod  go.sum  main.go
wa_tfm/whatsapp-mcp/whatsapp-bridge/: go.mod  main.go
